--- a/Nivel_2/Ejercicio_1.html
+++ b/Nivel_2/Ejercicio_1.html
@@ -5,12 +5,37 @@
     <meta charset="utf-8">
     <title>Ejercicio 1 - Maquetació i PHP</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
 
- <div id ="principal"><div id="header"><div id="logo"></div><div id="nav"><ul><li>Inicio</li><li>Rutas</li><li>Hoteles</li><li>Vuelos</li><li>Contacto</li></ul></div><div id="social"></div><div id="body"></div></div>
+    <div id="principal">
+        <div id="header">
+            <div id="logo"><img src="img/logo.png"></div>
+            <div id="nav">
+                <ul>
+                    <li><i class="fa-solid fa-house"></i><a href="#">Inicio</a></li>
+                    <li><i class="fa-solid fa-map-location"></i><a href="#">Rutas</a></li>
+                    <li><i class="fa-solid fa-square-h"></i><a href='#'>Hoteles</a></li>
+                    <li><i class="fa-solid fa-plane"></i><a href='#'>Vuelos</a></li>
+                    <li><i class="fa-solid fa-envelope-open-text"></i><a href='#'>Contacto</a></li>
+                </ul>
+            </div>
+            <div id="social-div">
+                <ul>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="body">
+            <h1>"Disfruta de la experiencia de otros viajeros"</h1>
+        </div>
 
 
 
