--- a/Nivel_2/Ejercicio_1.html
+++ b/Nivel_2/Ejercicio_1.html
@@ -15,7 +15,15 @@
 
     <div id="principal">
         <div id="header">
-            <div id="logo"><img src="img/logo.png"></div>
+            <div id="logo"><img src="img/logo.png" alt="logo-japon"></div>
+            <div id="menu-desplegable"><select name="select">
+                <option value="value1" id="opcion-menu"><a href="#">- menu -</a></option>
+                <option value="value1"><a href="#">Inicio</a></option>
+                <option value="value2"><a href="#">Rutas</a></option>
+                <option value="value3"><a href="#">Hoteles</a></option>
+                <option value="value3"><a href="#">Vuelos</a></option>
+                <option value="value3"><a href="#">Contacto</a></option>
+            </select></div>
             <div id="nav">
                 <ul>
                     <li><i class="fa-solid fa-house"></i><a href="#">Inicio</a></li>
@@ -29,7 +37,6 @@
                 <ul>
                     <li><i class="fa-brands fa-facebook"></i></li>
                     <li><i class="fa-brands fa-twitter"></i></li>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -40,3 +47,4 @@
 
 
 </body>
+</html>
