--- a/Nivel_2/Nivel_1/Ejercicio_1.html
+++ b/Nivel_2/Nivel_1/Ejercicio_1.html
@@ -17,13 +17,13 @@
         <div id="header">
             <div id="logo"><img src="img/logo.png" alt="logo-japon"></div>
             <div id="menu-desplegable"><select name="select">
-                <option value="value1" id="opcion-menu"><a href="#">- menu -</a></option>
-                <option value="value1"><a href="#">Inicio</a></option>
-                <option value="value2"><a href="#">Rutas</a></option>
-                <option value="value3"><a href="#">Hoteles</a></option>
-                <option value="value3"><a href="#">Vuelos</a></option>
-                <option value="value3"><a href="#">Contacto</a></option>
-            </select></div>
+                    <option value="value1" id="opcion-menu"><a href="#">- menu -</a></option>
+                    <option value="value1"><a href="#">Inicio</a></option>
+                    <option value="value2"><a href="#">Rutas</a></option>
+                    <option value="value3"><a href="#">Hoteles</a></option>
+                    <option value="value3"><a href="#">Vuelos</a></option>
+                    <option value="value3"><a href="#">Contacto</a></option>
+                </select></div>
             <div id="nav">
                 <ul>
                     <li><i class="fa-solid fa-house"></i><a href="#">Inicio</a></li>
@@ -44,7 +44,21 @@
             <h1>"Disfruta de la experiencia de otros viajeros"</h1>
         </div>
 
+        <div id="cuerpo">
+            <div id="articulos">
+                <div id="seccion1">
+                    <div id="seccion1a"></div>
+                    <div id="seccion2b"></div>
+                </div>
+                <div id="seccion2">
+                    <div id="seccion2a"></div>
+                    <div id="seccion2b"></div>
+                </div>
+            </div>
+            <div id="sidebar"></div>
+        </div>
 
 
 </body>
+
 </html>
