--- a/Nivel_2/Nivel_2/Ejercicio_2.html
+++ b/Nivel_2/Nivel_2/Ejercicio_2.html
@@ -47,16 +47,63 @@
         <div id="cuerpo">
             <div id="articulos">
                 <div id="seccion1">
-                    <div id="seccion1a"></div>
-                    <div id="seccion2b"></div>
+                    <div id="seccion1a">
+                        <div id="seccion1a-img"><img src="img/sakura.jpg" width="350" height="170"></div>
+                        <div id="seccion1a-encabezado">
+                            <h3>CULTURA</h3>
+                        </div>
+                        <div id="seccion1a-descripcion" class="excerpt"> Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
+                            Maecenas maximus hendrerit arcu vitae dictum. Nullam volutpat mauris eu velit pretium, eget
+                            elementum nisl eleifend. Nunc vel ultricies metus. In ac.</div>
+                        <div class="leer-mas"><a href="#">leer más</a></div>
+                    </div>
+                    <div id="seccion1b">
+                        <div id="seccion1b-img"><img src="img/comida.jpg" width="350" height="170"> </div>
+                        <div id="seccion1a-encabezado">
+                            <h3>GASTRONOMIA</h3>
+                        </div>
+                        <div id="seccion1b-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
+                            Maecenas maximus hendrerit arcu vitae dictum. Nullam volutpat mauris eu velit pretium, eget
+                            elementum nisl eleifend. Nunc vel ultricies metus. In ac.</div>
+                        <div class="leer-mas"><a href="#">leer más</a></div>
+                    </div>
                 </div>
                 <div id="seccion2">
-                    <div id="seccion2a"></div>
-                    <div id="seccion2b"></div>
+                    <div id="seccion2a">
+                        <div id="seccion1a-img"><img src="img/fuji.jpg" width="350" height="170"></div>
+                        <div id="seccion2a-encabezado">
+                            <h3>TURISMO</h3>
+                        </div>
+                        <div id="seccion2a-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
+                            Maecenas maximus hendrerit arcu vitae dictum. Nullam volutpat mauris eu velit pretium, eget
+                            elementum nisl eleifend. Nunc vel ultricies metus. In ac.</div>
+                        <div class="leer-mas"><a href="#">leer más</a></div>
+                    </div>
+                    <div id="seccion2b">
+                        <div id="seccion2b-img"><img src="img/noche.jpg" width="350" height="170"></div>
+                        <div id="seccion2a-encabezado">
+                            <h3>VIDA NOCTURNA</h3>
+                        </div>
+                        <div id="seccion2b-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
+                            Maecenas maximus hendrerit arcu vitae dictum. Nullam volutpat mauris eu velit pretium, eget
+                            elementum nisl eleifend. Nunc vel ultricies metus. In ac.</div>
+                        <div class="leer-mas"><a href="#">leer más</a></div>
+                    </div>
                 </div>
+                <div id="seccion3">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.</div>
+
             </div>
-            <div id="sidebar"></div>
+            <div id="sidebar">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+                velit.</div>
         </div>
+
+        <div id="footer"><div id="texto-footer"> ©2021 Japan Tourism</div></div>
 
 
 </body>
