Ejercicio 2 version tablet

--- a/Nivel_2/Nivel_2/Ejercicio_2.html
+++ b/Nivel_2/Nivel_2/Ejercicio_2.html
@@ -48,7 +48,7 @@
             <div id="articulos">
                 <div id="seccion1">
                     <div id="seccion1a">
-                        <div id="seccion1a-img"><img src="img/sakura.jpg" width="350" height="170"></div>
+                        <div id="seccion1a-img"><img src="img/sakura.jpg" width="350" height="170" class="img-responsive"></div>
                         <div id="seccion1a-encabezado">
                             <h3>CULTURA</h3>
                         </div>
@@ -59,7 +59,7 @@
                         <div class="leer-mas"><a href="#">leer más</a></div>
                     </div>
                     <div id="seccion1b">
-                        <div id="seccion1b-img"><img src="img/comida.jpg" width="350" height="170"> </div>
+                        <div id="seccion1b-img"><img src="img/comida.jpg" width="350" height="170" class="img-responsive"> </div>
                         <div id="seccion1a-encabezado">
                             <h3>GASTRONOMIA</h3>
                         </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div id="seccion2">
                     <div id="seccion2a">
-                        <div id="seccion1a-img"><img src="img/fuji.jpg" width="350" height="170"></div>
+                        <div id="seccion1a-img"><img src="img/fuji.jpg" width="350" height="170" class="img-responsive"></div>
                         <div id="seccion2a-encabezado">
                             <h3>TURISMO</h3>
                         </div>
@@ -83,7 +83,7 @@
                         <div class="leer-mas"><a href="#">leer más</a></div>
                     </div>
                     <div id="seccion2b">
-                        <div id="seccion2b-img"><img src="img/noche.jpg" width="350" height="170"></div>
+                        <div id="seccion2b-img"><img src="img/noche.jpg" width="350" height="170" class="img-responsive"></div>
                         <div id="seccion2a-encabezado">
                             <h3>VIDA NOCTURNA</h3>
                         </div>
@@ -99,8 +99,8 @@
                     adipiscing elit.</div>
 
             </div>
-            <div id="sidebar">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                velit.</div>
+            <div id="sidebar"><div id="inner-sidebar">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+                velit.</div></div>
         </div>
 
         <div id="footer"><div id="texto-footer"> ©2021 Japan Tourism</div></div>
