--- a/Nivel_2/Ejercicio_2/Ejercicio_2.html
+++ b/Nivel_2/Ejercicio_2/Ejercicio_2.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ejercicio 1 - Maquetació i PHP</title>
+    <title>Ejercicio 2 - Maquetació i PHP</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -15,7 +16,7 @@
 
     <div id="principal">
         <div id="header">
-            <div id="logo"><img src="img/logo.png" alt="logo-japon"></div>
+            <div id="logo"><a href="#"><img src="img/logo.png" alt="logo-japon"></a></div>
             <div id="menu-desplegable"><select name="select">
                     <option value="value1" id="opcion-menu"><a href="#">- menu -</a></option>
                     <option value="value1"><a href="#">Inicio</a></option>
@@ -35,8 +36,8 @@
             </div>
             <div id="social-div">
                 <ul>
-                    <li><i class="fa-brands fa-facebook"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><a href=#><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href=#><i class="fa-brands fa-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -48,9 +49,10 @@
             <div id="articulos">
                 <div id="seccion1">
                     <div id="seccion1a">
-                        <div id="seccion1a-img"><img src="img/sakura.jpg" width="350" height="170" class="img-responsive"></div>
+                        <div id="seccion1a-img"><img src="img/sakura.jpg" width="350" height="170"
+                                class="img-responsive" alt="arbol sakura"></div>
                         <div id="seccion1a-encabezado">
-                            <h3>CULTURA</h3>
+                            <h3>cultura</h3>
                         </div>
                         <div id="seccion1a-descripcion" class="excerpt"> Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
@@ -59,9 +61,10 @@
                         <div class="leer-mas"><a href="#">leer más</a></div>
                     </div>
                     <div id="seccion1b">
-                        <div id="seccion1b-img"><img src="img/comida.jpg" width="350" height="170" class="img-responsive"> </div>
+                        <div id="seccion1b-img"><img src="img/comida.jpg" width="350" height="170"
+                                class="img-responsive" alt="comida japonesa"> </div>
                         <div id="seccion1a-encabezado">
-                            <h3>GASTRONOMIA</h3>
+                            <h3>gastronomia</h3>
                         </div>
                         <div id="seccion1b-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
@@ -72,9 +75,10 @@
                 </div>
                 <div id="seccion2">
                     <div id="seccion2a">
-                        <div id="seccion1a-img"><img src="img/fuji.jpg" width="350" height="170" class="img-responsive"></div>
+                        <div id="seccion1a-img"><img src="img/fuji.jpg" width="350" height="170" class="img-responsive"
+                                alt="monte Fuji"></div>
                         <div id="seccion2a-encabezado">
-                            <h3>TURISMO</h3>
+                            <h3>turismo</h3>
                         </div>
                         <div id="seccion2a-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
@@ -83,9 +87,10 @@
                         <div class="leer-mas"><a href="#">leer más</a></div>
                     </div>
                     <div id="seccion2b">
-                        <div id="seccion2b-img"><img src="img/noche.jpg" width="350" height="170" class="img-responsive"></div>
+                        <div id="seccion2b-img"><img src="img/noche.jpg" width="350" height="170" class="img-responsive"
+                                alt="noche japonesa"></div>
                         <div id="seccion2a-encabezado">
-                            <h3>VIDA NOCTURNA</h3>
+                            <h3>vida nocturna</h3>
                         </div>
                         <div id="seccion2b-descripcion" class="excerpt">Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. In ante libero, pellentesque id nisl id, consectetur sollicitudin felis.
@@ -99,11 +104,24 @@
                     adipiscing elit.</div>
 
             </div>
-            <div id="sidebar"><div id="inner-sidebar">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                velit.</div></div>
+            <div id="sidebar">
+                <div id="inner-sidebar">
+                    <h4>Something</h4>
+                    <p>Vivamus eget tortor felis. Mauris ut nulla eu est euismod cursus. Donec quis
+                        ligula eleifend, efficitur lectus aliquam, ultrices sem. Proin id faucibus turpis. Mauris enim
+                        leo,
+                        facilisis non pharetra eget, lobortis in tellus. Praesent lacus purus, venenatis sed tellus
+                        egestas,
+                        vehicula interdum mauris. Morbi et porta nisl, eget pharetra diam.
+                        adipisci
+                        velit.</p>
+                </div>
+            </div>
         </div>
 
-        <div id="footer"><div id="texto-footer"> ©2021 Japan Tourism</div></div>
+        <div id="footer">
+            <div id="texto-footer"> ©2021 Japan Tourism</div>
+        </div>
 
 
 </body>
